force-app/main/default/objects/Auth_Provider__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AuthSuffix__c</fullName>
        <label>Auth Suffix</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseUrl__c</fullName>
        <label>BaseUrl</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CallbackUrl__c</fullName>
        <label>CallbackUrl</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ClientId__c</fullName>
        <label>ClientId</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClientSecret__c</fullName>
        <label>ClientSecret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenSuffix__c</fullName>
        <label>Token Suffix</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Auth Provider</label>
</CustomObject>